--- a/monsters-rolodex/public/index.html
+++ b/monsters-rolodex/public/index.html
@@ -13,6 +13,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Monsters-rolodex</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
